<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testfragment.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroupSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_secondQuestion">

            <RadioButton
                android:id="@+id/radioButton_gut_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/richtig"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <RadioButton
                android:id="@+id/radioButton_schlecht_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falsch"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_secondQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/second_question"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_submit_Second"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/absenden"
            app:icon="@drawable/ic_send_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupSecond" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>